tests/cases/compile_fail/operator_unary_override_bad_arity.lsc
operator unary -(a: i64, b: i64) -> i64 do
  return a + b
end
